unit test for gas price
Signed-off-by: smallyunet <dev.wangyu@gmail.com>